--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #4d6088;
+  background-color: #7d9ad7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,6 +24,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-footer {
+  text-align: center;
+  color: black;
+  font-size: medium;
 }
 
 .App-link {
